--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.9)
-project(filler C)
+project(filler_mvukolov C)
 
 set(CMAKE_C_STANDARD 99)
 
 set(SOURCE_FILES
         srcs/filler.c
-        get_next_line/get_next_line.c)
+        get_next_line/get_next_line.c get_next_line/get_current_map.c filler.h)
 include_directories(get_next_line)
 
 include_directories(ft_printf)
@@ -14,6 +14,6 @@ include_directories(ft_printf/libftprintf)
 
 add_subdirectory(ft_printf)
 
-add_executable(filler ${SOURCE_FILES})
+add_executable(filler_mvukolov ${SOURCE_FILES})
 
-target_link_libraries(filler libft)
+target_link_libraries(filler_mvukolov libft)
